--- a/app/src/main/res/layout/fragment_calendar.xml
+++ b/app/src/main/res/layout/fragment_calendar.xml
@@ -17,15 +17,15 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
-        <ImageButton
+        <com.google.android.material.button.MaterialButton
             android:id="@+id/ibtnActualDay"
             android:layout_width="50dp"
-            android:layout_height="40dp"
+            android:layout_height="45dp"
             android:background="@color/white"
             android:backgroundTint="@color/mainBlue"
             android:contentDescription="@string/calendar_icon"
             android:padding="8dp"
-            android:src="@drawable/ic_target"
+            android:text="@string/hoy"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
