--- a/app/src/main/res/layout/fragment_perfil.xml
+++ b/app/src/main/res/layout/fragment_perfil.xml
@@ -2,6 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#F5F6FA"
@@ -50,51 +51,55 @@
         app:layout_constraintEnd_toEndOf="parent"
         android:textAlignment="center" />
 
-    <!-- Correo -->
-    <TextView
-        android:id="@+id/correoTextView"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:text="@string/correo_usuario_correo_com"
-        android:textSize="16sp"
-        android:textColor="#666666"
-        android:layout_marginTop="20dp"
-        app:layout_constraintTop_toBottomOf="@id/nombreUsuarioTextView"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:textAlignment="center"/>
-
     <!-- Descripción -->
-    <TextView
-        android:id="@+id/descripcionTextView"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:text="@string/descripci_n_informaci_n_adicional_sobre_el_usuario"
-        android:textSize="16sp"
-        android:textColor="#666666"
-        android:layout_marginTop="16dp"
-        app:layout_constraintTop_toBottomOf="@id/correoTextView"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:textAlignment="center"/>
 
     <!-- Botón Cerrar sesión -->
+
+    <androidx.cardview.widget.CardView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="15dp"
+        android:backgroundTint="@color/blank_background"
+        app:cardCornerRadius="30dp"
+        app:cardElevation="4dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/nombreUsuarioTextView">
+
+        <TextView
+            android:id="@+id/descripcionTextView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="12dp"
+            android:padding="15dp"
+            android:text="@string/descripci_n_informaci_n_adicional_sobre_el_usuario"
+            android:textColor="#666666"
+            android:textSize="16sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/nombreUsuarioTextView" />
+
+    </androidx.cardview.widget.CardView>
+
+
+
     <Button
         android:id="@+id/btnCerrarSesion"
         android:layout_width="0dp"
         android:layout_height="48dp"
-        android:layout_marginTop="48dp"
+        android:layout_marginBottom="50dp"
         android:backgroundTint="@color/mainBlue"
-        android:text="@string/cerrar_sesi_n"
-        android:textColor="#FFFFFF"
-        android:textAllCaps="false"
-        android:textSize="18sp"
         android:fontFamily="sans-serif-medium"
         android:letterSpacing="0.05"
-        app:layout_constraintTop_toBottomOf="@id/descripcionTextView"
-        app:layout_constraintStart_toStartOf="parent"
+        android:text="@string/cerrar_sesi_n"
+        android:textAllCaps="false"
+        android:textColor="#FFFFFF"
+        android:textSize="18sp"
+        app:cornerRadius="12dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:cornerRadius="12dp"/>
+        app:layout_constraintStart_toStartOf="parent"
+        />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
 
