--- a/app/src/main/res/layout/fragment_create_event_detail.xml
+++ b/app/src/main/res/layout/fragment_create_event_detail.xml
@@ -24,6 +24,7 @@
         android:layout_height="wrap_content"
         android:text="@string/personal"
         android:backgroundTint="#BABABA"
+        android:textSize="13sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
