--- a/app/src/main/res/layout/fragment_calendar.xml
+++ b/app/src/main/res/layout/fragment_calendar.xml
@@ -8,7 +8,21 @@
     android:backgroundTint="@color/white"
     >
 
+    <androidx.appcompat.widget.SearchView
+        android:id="@+id/searchViewEvents"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="15dp"
+        android:background="@drawable/search_view_background"
+        app:layout_constraintBottom_toTopOf="@+id/cvCalendar"
+        app:layout_constraintEnd_toStartOf="@+id/cardView2"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        />
+
     <androidx.cardview.widget.CardView
+        android:id="@+id/cardView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="5dp"
@@ -21,6 +35,7 @@
             android:id="@+id/ibtnActualDay"
             android:layout_width="50dp"
             android:layout_height="45dp"
+            android:layout_marginTop="11dp"
             android:background="@color/white"
             android:backgroundTint="@color/mainBlue"
             android:contentDescription="@string/calendar_icon"
@@ -35,7 +50,7 @@
         android:id="@+id/cvCalendar"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginTop="56dp"
+        android:layout_marginTop="76dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
